@@ -1,5 +1,10 @@
 2003-11-25  Alper Ersoy  <dirt@gtk.org>
 
+	* makeinfo/sectioning.c (cm_appendix): reset numbers only when
+	changing enum_marker.
+
+2003-11-25  Alper Ersoy  <dirt@gtk.org>
+
 	* makeinfo/index.c (cm_printindex): made Appendix matching locale
 	aware.
 
